<resources>
    <string name="app_name">ConcreteSensor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello fragment</string>
    <string name="init_title">Datos de inicialización</string>
    <string name="init_button_name">Modifica</string>
    <string name="setup_title">Pantalla de setup: inicializo ble</string>
    <string name="setup_button_name">Modifico setup</string>
    <string name="company_name">El Dorado SRL</string>
    <string name="sensor_id_text">Sensor</string>
    <string name="mixer_id_text">Trompo</string>
    <string name="user_id_text">Conductor</string>
    <string name="sensor_id_hint">Id sensor</string>
    <string name="mixer_id_hint">Id trompo</string>
    <string name="user_id_hint">Id conductor</string>
    <string name="meas_button_text">Mediciones</string>
    <string name="ble_init_text">Conexion Bluetooth</string>
    <string name="ble_not_supported">BLE not supported</string>



    <string name="ble_playground">BLE Playground</string>


    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

</resources>